@@ -1,3 +1,7 @@
+2007-05-26 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added News - sdcc 2.7.0 RC3
+
 2007-05-22 Borut Razem <borut.razem AT siol.net>
 
 	* index.php: added News - sdcc 2.7.0 RC2, availability of
